Post blog and image
It's now possible to post a blog post and an image and deleting a post will delete the associated image

--- a/MyWebsiteMarch2025/appsettings.json
+++ b/MyWebsiteMarch2025/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dvr9t29vj",
+    "ApiKey": "456954326161582",
+    "ApiSecret": "E82kUuIxpbCj2sk_kU3in2_Fagc"
+  },
   "AllowedHosts": "*"
 }
