--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
