--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "bootstrap": "^5.3.3",
-    "font-awesome": "^4.7.0",
     "ng2-file-upload": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
