--- a/MyWebsiteMarch2025/appsettings.json
+++ b/MyWebsiteMarch2025/appsettings.json
@@ -10,5 +10,8 @@
     "ApiKey": "456954326161582",
     "ApiSecret": "E82kUuIxpbCj2sk_kU3in2_Fagc"
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=./blogPosts.db"
+  },
   "AllowedHosts": "*"
 }
