--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^5.3.3",
     "ng2-file-upload": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
