--- a/client/angular.json
+++ b/client/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "../MyWebsiteMarch2025/wwwroot",
+              "base": "dist/netlify-client",
               "browser": ""
             },
             "index": "src/index.html",
